--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: webcontainos-service
+  name: daemoncontainos-service
 spec:
-  type: LoadBalancer
+  # type: LoadBalancer
   selector:
-    app: webcontainos-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 5000
+    app: daemoncontainos-app
+  # ports:
+  #   - protocol: TCP
+  #     port: 80
+  #     targetPort: 5000
