--- a/kubernetes/daemon-deployment.yaml
+++ b/kubernetes/daemon-deployment.yaml
@@ -9,12 +9,12 @@ spec:
   selector:
     matchLabels:
       app: daemoncontainos-app
-  replicas: 2
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 0
+  replicas: 1
+  # strategy:
+  #   type: RollingUpdate
+  #   rollingUpdate:
+  #     maxSurge: 1
+  #     maxUnavailable: 0
   template:
     metadata:
       labels:
@@ -24,8 +24,11 @@ spec:
       - name: daemoncontainos-app
         image: snrmukesh/daemon_containos:1.0.0
         imagePullPolicy: Always
-        ports:
-        # - containerPort: 5000
+        env:
+          - name: REDIS_HOST
+            value: redis-service
+          - name: REDIS_PORT
+            value: "6379"
         resources:
           requests:
             memory: "64Mi"
